rendered auth ui files

--- a/views/user/forgot-password.ejs
+++ b/views/user/forgot-password.ejs
@@ -11,12 +11,13 @@
     <link href="../../public/assets/vendor/fontawesome/css/solid.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/fontawesome/css/brands.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/assets/css/auth.css" rel="stylesheet">
     <link href="../../public/assets/css/master.css" rel="stylesheet">
     <link href="../../public/assets/vendor/flagiconcss/css/flag-icon.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.3/css/dataTables.dataTables.min.css"/>
     <script src="../../public/assets/js/jquery/jquery-3.7.1.min.js"></script>
-</head>  
+</head> 
 
 <body>
     <div class="wrapper">
@@ -24,26 +25,18 @@
             <div class="card">
                 <div class="card-body text-center">
                     <div class="mb-4">
-                        <img class="brand" src="assets/img/bootstraper-logo.png" alt="bootstraper logo">
+                        <img class="brand" src="../public/assets/img/bootstraper-logo.png" alt="bootstraper logo">
                     </div>
-                    <h6 class="mb-4 text-muted">Reset your password</h6>
-                    <form action="/reset" id="reset_password_form">
+                    <h6 class="mb-4 text-muted">Reset Forgotten Password</h6>
+                    <p class="text-muted text-start">Enter your email address and your new password will be emailed to you.</p>
+                    <form action="/reset" id="forgot_password_form">
                         <div class="mb-3 text-start">
-                            <label for="token" class="form-label">Reset Token:</label>
-                            <input type="text" class="form-control" id="token" name="token" placeholder="Enter the reset token" required>
+                            <label for="email" class="form-label">Email adress</label>
+                            <input type="email" class="form-control" placeholder="Enter Email" required>
                         </div>
-                        <div class="mb-3 text-start">
-                            <label for="new-password" class="form-label">New Password:</label>
-                            <input type="password" class="form-control" id="new-password" name="new-password" placeholder="Enter your new password" required>
-                        </div>
-                        <div class="mb-3 text-start">
-                            <label for="confirm-password" class="form-label">Confirm Password:</label>
-                            <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Confirm your new password" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary shadow-2 mb-4">Reset Password</button>
+                        <button type="submit" class="btn btn-primary shadow-2 mb-4">Send me new password</button>
                     </form>
-                    <p class="mb-2 text-muted">Forgot password? <a href="forgot-password.ejs">Reset</a></p>
-                    <p class="mb-0 text-muted">Don't have account yet? <a href="signup.ejs">Signup</a></p>
+                    <p class="mb-0 text-muted">Don’t have an account? <a href="/api/v1/signup">Sign up</a></p>
                 </div>
             </div>
         </div>
