--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -6,11 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Forgot Password</title>
+    <title>Log In</title>
     <link href="../../public/assets/vendor/fontawesome/css/fontawesome.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/fontawesome/css/solid.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/fontawesome/css/brands.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="../../public/assets/css/login.css" rel="stylesheet"> -->
+    <link href="../../public/assets/css/auth.css" rel="stylesheet">
     <link href="../../public/assets/css/master.css" rel="stylesheet">
     <link href="../../public/assets/vendor/flagiconcss/css/flag-icon.min.css" rel="stylesheet">
 
@@ -24,7 +26,7 @@
             <div class="card">
                 <div class="card-body text-center">
                     <div class="mb-4">
-                        <img class="brand" src="assets/img/bootstraper-logo.png" alt="bootstraper logo">
+                        <img class="brand" src="../../public/assets/img/bootstraper-logo.png" alt="bootstraper logo">
                     </div>
                     <h6 class="mb-4 text-muted">Login to your account</h6>
                     <form action="/login" id="login_form">
@@ -46,8 +48,8 @@
                         </div>
                         <button type="submit" class="btn btn-primary shadow-2 mb-4">Login</button>
                     </form>
-                    <p class="mb-2 text-muted">Forgot password? <a href="forgot-password.ejs">Reset</a></p>
-                    <p class="mb-0 text-muted">Don't have account yet? <a href="signup.ejs">Signup</a></p>
+                    <p class="mb-2 text-muted">Forgot password? <a href="/api/v1/forgot_password">Reset</a></p>
+                    <p class="mb-0 text-muted">Don't have account yet? <a href="/api/v1/signup">Signup</a></p>
                 </div>
             </div>
         </div>
