--- a/views/user/reset.ejs
+++ b/views/user/reset.ejs
@@ -6,11 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Forgot Password</title>
+    <title>Reset Password</title>
     <link href="../../public/assets/vendor/fontawesome/css/fontawesome.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/fontawesome/css/solid.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/fontawesome/css/brands.min.css" rel="stylesheet">
     <link href="../../public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../public/assets/css/auth.css" rel="stylesheet">
     <link href="../../public/assets/css/master.css" rel="stylesheet">
     <link href="../../public/assets/vendor/flagiconcss/css/flag-icon.min.css" rel="stylesheet">
 
@@ -24,38 +25,26 @@
             <div class="card">
                 <div class="card-body text-center">
                     <div class="mb-4">
-                        <img class="brand" src="assets/img/bootstraper-logo.png" alt="bootstraper logo">
+                        <img class="brand" src="../../public/assets/img/bootstraper-logo.png" alt="bootstraper logo">
                     </div>
-                    <h6 class="mb-4 text-muted">Create new account</h6>
-                    <form action="/register" id="signup_form">
+                    <h6 class="mb-4 text-muted">Reset your password</h6>
+                    <form action="/reset" id="reset_password_form">
                         <div class="mb-3 text-start">
-                            <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" placeholder="Enter Name" required>
+                            <label for="token" class="form-label">Reset Token:</label>
+                            <input type="text" class="form-control" id="token" name="token" placeholder="Enter the reset token" required>
                         </div>
                         <div class="mb-3 text-start">
-                            <label for="email" class="form-label">Email adress</label>
-                            <input type="email" class="form-control" placeholder="Enter Email" required>
+                            <label for="new-password" class="form-label">New Password:</label>
+                            <input type="password" class="form-control" id="new-password" name="new-password" placeholder="Enter your new password" required>
                         </div>
                         <div class="mb-3 text-start">
-                            <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" placeholder="Password" required>
+                            <label for="confirm-password" class="form-label">Confirm Password:</label>
+                            <input type="password" class="form-control" id="confirm-password" name="confirm-password" placeholder="Confirm your new password" required>
                         </div>
-                        
-                        <div class="mb-3">
-                            <input type="password" class="form-control" placeholder="Confirm password" required>
-                        </div> 
-                       
-                        <div class="mb-3 text-start">
-                            <div class="form-check">
-                              <input class="form-check-input" name="confirm" type="checkbox" value="" id="check1">
-                              <label class="form-check-label" for="check1">
-                                I agree to the <a href="#" tabindex="-1">terms and policy</a>.
-                              </label>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary shadow-2 mb-4">Register</button>
+                        <button type="submit" class="btn btn-primary shadow-2 mb-4">Reset Password</button>
                     </form>
-                    <p class="mb-0 text-muted">Allready have an account? <a href="login.ejs">Log in</a></p>
+                    <p class="mb-2 text-muted">Forgot password? <a href="/api/v1/reset_password">Reset</a></p>
+                    <p class="mb-0 text-muted">Don't have account yet? <a href="/api/v1/signup">Signup</a></p>
                 </div>
             </div>
         </div>
