rendered auth ui files

--- a/views/user/reset.ejs
+++ b/views/user/reset.ejs
@@ -43,8 +43,8 @@
                         </div>
                         <button type="submit" class="btn btn-primary shadow-2 mb-4">Reset Password</button>
                     </form>
-                    <p class="mb-2 text-muted">Forgot password? <a href="/api/v1/reset_password">Reset</a></p>
-                    <p class="mb-0 text-muted">Don't have account yet? <a href="/api/v1/signup">Signup</a></p>
+                    <p class="mb-2 text-muted">Forgot password? <a href="/reset_password">Reset</a></p>
+                    <p class="mb-0 text-muted">Don't have account yet? <a href="/signup">Signup</a></p>
                 </div>
             </div>
         </div>
