--- a/views/user/forgot-password.ejs
+++ b/views/user/forgot-password.ejs
@@ -36,7 +36,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary shadow-2 mb-4">Send me new password</button>
                     </form>
-                    <p class="mb-0 text-muted">Don’t have an account? <a href="/api/v1/signup">Sign up</a></p>
+                    <p class="mb-0 text-muted">Don’t have an account? <a href="/signup">Sign up</a></p>
                 </div>
             </div>
         </div>
