--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -48,8 +48,8 @@
                         </div>
                         <button type="submit" class="btn btn-primary shadow-2 mb-4">Login</button>
                     </form>
-                    <p class="mb-2 text-muted">Forgot password? <a href="/api/v1/forgot_password">Reset</a></p>
-                    <p class="mb-0 text-muted">Don't have account yet? <a href="/api/v1/signup">Signup</a></p>
+                    <p class="mb-2 text-muted">Forgot password? <a href="/forgot_password">Reset</a></p>
+                    <p class="mb-0 text-muted">Don't have account yet? <a href="/signup">Signup</a></p>
                 </div>
             </div>
         </div>
