--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -56,7 +56,7 @@
                         </div>
                         <button type="submit" class="btn btn-primary shadow-2 mb-4">Register</button>
                     </form>
-                    <p class="mb-0 text-muted">Allready have an account? <a href="/api/v1/login">Log in</a></p>
+                    <p class="mb-0 text-muted">Allready have an account? <a href="/login">Log in</a></p>
                 </div>
             </div>
         </div>
