--- a/views/hospital/list.ejs
+++ b/views/hospital/list.ejs
@@ -176,8 +176,8 @@
                                                     <td>Mark</td>
                                                     <td>Otto</td>
                                                     <td>@mdo</td>
-                                                    <td>
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-eye"></i></a>
+                                                    <td class="text-end">
+                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-pen"></i></a>
                                                         <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
                                                         <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
                                                     </td>
@@ -187,8 +187,8 @@
                                                     <td>Jacob</td>
                                                     <td>Thornton</td>
                                                     <td>@fat</td>
-                                                    <td>
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-eye"></i></a>
+                                                    <td class="text-end">
+                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-pen"></i></a>
                                                         <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
                                                         <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
                                                     </td>
@@ -198,8 +198,8 @@
                                                     <td>Larry</td>
                                                     <td>the Bird</td>
                                                     <td>@twitter</td>
-                                                    <td>
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-eye"></i></a>
+                                                    <td class="text-end">
+                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-pen"></i></a>
                                                         <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
                                                         <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
                                                     </td>
