--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -29,6 +29,11 @@
                         <img class="brand" src="../../public/assets/img/bootstraper-logo.png" alt="bootstraper logo">
                     </div>
                     <h6 class="mb-4 text-muted">Login to your account</h6>
+
+                    <div style="text-align: center;">
+                        <h4>Hospital Management System</h4>
+                    </div>
+
                     <form action="/login" id="login_form">
                         <div class="mb-3 text-start">
                             <label for="email" class="form-label">Email adress</label>
