--- a/views/hospital/add.ejs
+++ b/views/hospital/add.ejs
@@ -150,67 +150,61 @@
             <div class="content">
                 <div class="container">
                     <div class="page-title">
-                        <h3>Tables</h3>
+                        <h3>Forms</h3>
                     </div>
                     <div class="row">
-                        
-                        <div class="col-md-12 col-lg-12">
+                        <div class="col-lg-12">
                             <div class="card">
-                                <div class="card-header">Stripe Table</div>
+                                <div class="card-header">All form elements</div>
                                 <div class="card-body">
-                                    <p class="card-title">Add class <code>.table-striped</code> inside table element</p>
-                                    <div class="table-responsive">
-                                        <table class="table table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th>ID</th>
-                                                    <th>First Name</th>
-                                                    <th>Last Name</th>
-                                                    <th>Username</th>
-                                                    <th>Action</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <th scope="row">1</th>
-                                                    <td>Mark</td>
-                                                    <td>Otto</td>
-                                                    <td>@mdo</td>
-                                                    <td>
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-eye"></i></a>
-                                                        <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">2</th>
-                                                    <td>Jacob</td>
-                                                    <td>Thornton</td>
-                                                    <td>@fat</td>
-                                                    <td>
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-eye"></i></a>
-                                                        <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">3</th>
-                                                    <td>Larry</td>
-                                                    <td>the Bird</td>
-                                                    <td>@twitter</td>
-                                                    <td>
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-eye"></i></a>
-                                                        <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
+                                    <h5 class="card-title"></h5>
+                                    <form class="">
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2">Normal</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" name="" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="line"></div><br>
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2">Help text</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control">
+                                                <small class="form-text text-muted">A help text that brings hint to users.</small>
+                                            </div>
+                                        </div>
+                                        <div class="line"></div><br>
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2">Password</label>
+                                            <div class="col-sm-10">
+                                                <input type="password" name="password" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="line"></div><br>
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2">Placeholder</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" placeholder="placeholder" class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="line"></div><br>
+                                        <div class="mb-3 row">
+                                            <label class="col-sm-2">Disabled</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" disabled="" placeholder="disabled or read only input here" class="form-control" readonly>
+                                            </div>
+                                        </div>
+                                        <div class="line"></div><br>
+                                        <div class="mb-3 row">
+                                            <div class="col-sm-4 offset-sm-2">
+                                                <button type="submit" class="btn btn-secondary mb-2"><i class="fas fa-times"></i> Cancel</button>
+                                                <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-save"></i> Save</button>
+                                            </div>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
