--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -28,7 +28,7 @@
                         <img class="brand" src="../../public/assets/img/bootstraper-logo.png" alt="bootstraper logo">
                     </div>
                     <h6 class="mb-4 text-muted">Create new account</h6>
-                    <form action="/register" id="signup_form">
+                    <form action="/signup" id="signup_form">
                         <div class="mb-3 text-start">
                             <label for="name" class="form-label">Name</label>
                             <input type="text" class="form-control" placeholder="Enter Name" required>
@@ -54,7 +54,9 @@
                               </label>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary shadow-2 mb-4">Register</button>
+                        <div>
+                            <button type="submit" class="btn btn-primary shadow-2 mb-4">Register</button>
+                        </div>
                     </form>
                     <p class="mb-0 text-muted">Allready have an account? <a href="/login">Log in</a></p>
                 </div>
