set up signup and login routes

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -37,11 +37,11 @@
                     <form action="/login" id="login_form">
                         <div class="mb-3 text-start">
                             <label for="email" class="form-label">Email adress</label>
-                            <input type="email" class="form-control" placeholder="Enter Email" required>
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Enter Email" required>
                         </div>
                         <div class="mb-3 text-start">
                             <label for="password" class="form-label">Password</label>
-                            <input type="password" class="form-control" placeholder="Password" required>
+                            <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password" required>
                         </div>
                         <div class="mb-3 text-start">
                             <div class="form-check">
