--- a/views/hospital/list.ejs
+++ b/views/hospital/list.ejs
@@ -9,61 +9,30 @@
             <!-- end of navbar navigation -->
             <div class="content">
                 <div class="container">
-                    <div class="page-title">
-                        <h3>Tables</h3>
-                    </div>
+                    
                     <div class="row">
                         
                         <div class="col-md-12 col-lg-12">
                             <div class="card">
-                                <div class="card-header">Stripe Table</div>
+                                <div class="card-header"><span><i class="fa fa-hospital-symbol"></i> Hospital List</span></div>
+                                <div class="p-3">
+                                    <div class="btn btn-primary">Add Hospital</div>
+                                </div>
                                 <div class="card-body">
-                                    <p class="card-title">Add class <code>.table-striped</code> inside table element</p>
                                     <div class="table-responsive">
-                                        <table class="table table-striped">
+                                        <table id="hospitalTable" class="table table-striped">
                                             <thead>
                                                 <tr>
-                                                    <th>ID</th>
-                                                    <th>First Name</th>
-                                                    <th>Last Name</th>
-                                                    <th>Username</th>
                                                     <th>Action</th>
+                                                    <th>Name</th>
+                                                    <th>Description</th>
+                                                    <th>Email</th>
+                                                    <th>Location</th>
+                                                    <th>Phone</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr>
-                                                    <th scope="row">1</th>
-                                                    <td>Mark</td>
-                                                    <td>Otto</td>
-                                                    <td>@mdo</td>
-                                                    <td class="text-end">
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">2</th>
-                                                    <td>Jacob</td>
-                                                    <td>Thornton</td>
-                                                    <td>@fat</td>
-                                                    <td class="text-end">
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">3</th>
-                                                    <td>Larry</td>
-                                                    <td>the Bird</td>
-                                                    <td>@twitter</td>
-                                                    <td class="text-end">
-                                                        <a href="" class="btn btn-outline-warning btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-info btn-rounded"><i class="fas fa-pen"></i></a>
-                                                        <a href="" class="btn btn-outline-danger btn-rounded"><i class="fas fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
+                                                
                                             </tbody>
                                         </table>
                                     </div>
@@ -76,5 +45,7 @@
             </div>
         </div>
     </div>
+
+    <%- include('../templates/scripts') -%>
     
 <%- include('../templates/footer'); -%>
