--- a/views/templates/scripts.ejs
+++ b/views/templates/scripts.ejs
@@ -1,4 +1,3 @@
-
     <script src="../../public/assets/vendor/jquery/jquery.min.js"></script>
     <script src="../../public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../../public/assets/vendor/chartsjs/Chart.min.js"></script>
@@ -6,8 +5,6 @@
     <script src="../../public/assets/js/script.js"></script>
 
     <script src="../../public/assets/vendor/jquery/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/2.1.3/js/jquery.dataTables.min.js"></script>
     <script src="../../public/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../templates/js_scripts.js"></script>
-</body>
-
-</html>
