--- a/views/hospital/list.ejs
+++ b/views/hospital/list.ejs
@@ -16,7 +16,7 @@
                             <div class="card">
                                 <div class="card-header"><span><i class="fa fa-hospital-symbol"></i> Hospital List</span></div>
                                 <div class="p-3">
-                                    <div class="btn btn-primary">Add Hospital</div>
+                                    <div class="btn btn-dark">Add Hospital</div>
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
