--- a/views/hospital/list.ejs
+++ b/views/hospital/list.ejs
@@ -20,14 +20,14 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
-                                        <table id="hospitalTable" class="table table-striped">
+                                        <table class="table table-striped datatable">
                                             <thead>
                                                 <tr>
                                                     <th>Action</th>
                                                     <th>Name</th>
-                                                    <th>Description</th>
                                                     <th>Email</th>
                                                     <th>Location</th>
+                                                    <th>Description</th>
                                                     <th>Phone</th>
                                                 </tr>
                                             </thead>
