--- a/views/templates/scripts.ejs
+++ b/views/templates/scripts.ejs
@@ -1,10 +1,11 @@
     <script src="../../public/assets/vendor/jquery/jquery.min.js"></script>
     <script src="../../public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../public/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../public/assets/vendor/chartsjs/Chart.min.js"></script>
     <script src="../../public/assets/js/dashboard-charts.js"></script>
     <script src="../../public/assets/js/script.js"></script>
 
     <script src="../../public/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/2.1.3/js/jquery.dataTables.min.js"></script>
-    <script src="../../public/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.min.js" integrity="sha512-RCgrAvvoLpP7KVgTkTctrUdv7C6t7Un3p1iaoPr1++3pybCyCsCZZN7QEHMZTcJTmcJ7jzexTO+eFpHk4OCFAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../../templates/js_scripts.js"></script>
