--- a/views/templates/menu.ejs
+++ b/views/templates/menu.ejs
@@ -13,7 +13,7 @@
             <a href="/doctors"><i class="fas fa-user-md"></i> Doctors</a>
         </li>
         <li>
-            <a href="/employers"><i class="fas fa-user-tie"></i> Employers</a>
+            <a href="/employees"><i class="fas fa-user-tie"></i> Employers</a>
         </li>
         <li>
             <a href="/patients"><i class="fas fa-user-injured"></i> Patients</a>
