--- a/views/complain/list.ejs
+++ b/views/complain/list.ejs
@@ -14,9 +14,9 @@
                         
                         <div class="col-md-12 col-lg-12">
                             <div class="card">
-                                <div class="card-header"><span><i class="fa fa-user-md"></i> Doctor List</span></div>
+                                <div class="card-header"><span><i class="fa fa-user-injured"></i> Patient List</span></div>
                                 <div class="p-3">
-                                    <div class="btn btn-dark">Add Doctor</div>
+                                    <div class="btn btn-dark">Add Patient</div>
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
@@ -26,12 +26,11 @@
                                                     <th>Action</th>
                                                     <th>First Name</th>
                                                     <th>Last Name</th>
-                                                    <th>Email</th>
-                                                    <th>Date of Birth</th>
                                                     <th>Gender</th>
-                                                    <th>Department Name</th>
-                                                    <th>Address</th>
-                                                    <th>Phone</th>
+                                                    <th>Doctor Name</th>
+                                                    <th>Patient Number</th>
+                                                    <th>Diagnosis</th>
+                                                    <th>Location</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
