--- a/views/employee/list.ejs
+++ b/views/employee/list.ejs
@@ -14,9 +14,9 @@
                         
                         <div class="col-md-12 col-lg-12">
                             <div class="card">
-                                <div class="card-header"><span><i class="fa fa-user-md"></i> Doctor List</span></div>
+                                <div class="card-header"><span><i class="fa fa-user-tie"></i> Employer List</span></div>
                                 <div class="p-3">
-                                    <div class="btn btn-dark">Add Doctor</div>
+                                    <div class="btn btn-dark">Add Employer</div>
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
@@ -27,11 +27,9 @@
                                                     <th>First Name</th>
                                                     <th>Last Name</th>
                                                     <th>Email</th>
-                                                    <th>Date of Birth</th>
-                                                    <th>Gender</th>
-                                                    <th>Department Name</th>
-                                                    <th>Address</th>
                                                     <th>Phone</th>
+                                                    <th>Join Date</th>
+                                                    <th>Role</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
