--- a/views/user/list.ejs
+++ b/views/user/list.ejs
@@ -14,9 +14,9 @@
                         
                         <div class="col-md-12 col-lg-12">
                             <div class="card">
-                                <div class="card-header"><span><i class="fa fa-user-md"></i> Doctor List</span></div>
+                                <div class="card-header"><span><i class="fa fa-users"></i> Users List</span></div>
                                 <div class="p-3">
-                                    <div class="btn btn-dark">Add Doctor</div>
+                                    <div class="btn btn-dark">Add User</div>
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
@@ -24,18 +24,18 @@
                                             <thead>
                                                 <tr>
                                                     <th>Action</th>
+                                                    <th>Username</th>
                                                     <th>First Name</th>
                                                     <th>Last Name</th>
-                                                    <th>Email</th>
                                                     <th>Date of Birth</th>
-                                                    <th>Gender</th>
-                                                    <th>Department Name</th>
-                                                    <th>Address</th>
                                                     <th>Phone</th>
+                                                    <th>Email</th>
+                                                    <th>Location</th>
+                                                    <th>Email</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-
+                                                
                                             </tbody>
                                         </table>
                                     </div>
