--- a/views/hospital/list.ejs
+++ b/views/hospital/list.ejs
@@ -20,7 +20,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="table-responsive">
-                                        <table class="table table-striped datatable">
+                                        <table id="hospital_table" class="table table-striped datatable">
                                             <thead>
                                                 <tr>
                                                     <th>Action</th>
